[package]
name = "lb-l7"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
# Pillar 3b.3b-1: real H1 proxy.
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tokio = { workspace = true }
# PROTO-2-11 Wave 2c-2: `CancellationToken` powers the H2 graceful-
# shutdown emit (`serve_connection_with_cancel`).
tokio-util = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
lb-io = { path = "../lb-io" }
lb-h2 = { path = "../lb-h2" }
# CODE-2-01 dep edge (Wave-1 slice of CODE-2-01). lb-l7 had no
# dependency on lb-security so the SmuggleDetector / SlowlorisDetector
# / SlowPostDetector / per-IP cap were dead code on the L7 hot path.
# This commit adds ONLY the Cargo dependency edge so sec can land the
# actual detector wire-up (SEC-2-01 / SEC-2-03 / SEC-2-04 / SEC-2-10)
# on top in Wave-2. The `SecurityHooks` trait shim is intentionally
# NOT added here per the round-4 brief — it's deferred to the wave-2
# file that sec wires into.
lb-security = { path = "../lb-security" }
# PROTO-001: H1→H3 / H2→H3 upstream paths consume `lb_quic::request_h3_upstream`
# and the `H3UpstreamResponse` carrier type. lb-quic stays on quiche; we
# only consume its public API.
lb-quic = { path = "../lb-quic" }
# Item 3: gRPC proxy path (PROMPT.md §13). `lb-grpc` ships the
# codec-level types (GrpcDeadline, GrpcStatus, GrpcFrame, StreamingMode);
# we only consume them — no modifications to lb-grpc.
lb-grpc = { path = "../lb-grpc" }
# Item 2: WebSocket proxy path (RFC 6455 + RFC 8441).
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
# PROTO-2-18 (Wave 2c-2): the `tests/sni_authority_421.rs` integration
# test drives a real TLS handshake against
# `H1Proxy::serve_connection_with_cancel_sni` and asserts a 421
# Misdirected Request when the SNI ≠ Host. TLS pieces are dev-only —
# no production codepath in lb-l7 imports tokio-rustls / rcgen /
# rustls-pki-types.
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rcgen = { version = "0.13", features = ["pem"] }
