[package]
name = "lb-observability"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
# REL-2-06: structured JSON log output. `json` + `env-filter` are
# already pinned at the workspace root.
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
# REL-2-12 + REL-2-13: read the eBPF STATS map via the API ebpf
# delivered in EBPF-2-08 (`stats_export`). Non-Linux platforms get
# the zero-valued stub from the same crate so dev/test builds
# compile unchanged.
lb-l4-xdp = { path = "../lb-l4-xdp" }
# SEC-2-06 (Wave 2c-2): `AdminAuthGate` provides the bearer-token
# enforcement layer + bind-loopback validator. The dep flows in
# one direction only (`lb-security` does NOT depend on lb-observability).
lb-security = { path = "../lb-security" }
# Pillar 3b (Task #21): prometheus-backed metrics registry + text
# exposition. `default-features = false` drops the protobuf family.
prometheus = { workspace = true }
# Admin HTTP listener (GET /metrics, GET /healthz).
tokio = { workspace = true }
tokio-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
