[package]
name = "lb-security"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
parking_lot = { workspace = true }
# HMAC-SHA256 for stateless-retry tokens (Pillar 3b.3a). ring is already
# in the tree transitively via rustls; pulling it in directly keeps the
# retry module independent of rustls's feature set.
ring = "0.17"
# Constant-time equality for MAC comparison. Already transitive via
# rustls; declaring it direct makes the intent explicit.
subtle = "2"

[dev-dependencies]
rcgen = { version = "0.13", features = ["pem"] }
