[package]
name = "lb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
lb-io = { path = "../lb-io" }
lb-config = { path = "../lb-config" }
lb-controlplane = { path = "../lb-controlplane" }
lb-balancer = { path = "../lb-balancer" }
lb-observability = { path = "../lb-observability" }
lb-health = { path = "../lb-health" }
lb-security = { path = "../lb-security" }
lb-quic = { path = "../lb-quic" }
lb-l7 = { path = "../lb-l7" }
hyper = { workspace = true }
hyper-util = { workspace = true }
