[package]
name = "lb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[[bin]]
name = "expressgateway"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
lb-io = { path = "../lb-io" }
lb-config = { path = "../lb-config" }
# CODE-2-13: stub the lb_core::Shutdown import early so Wave-2 can
# pass-it-into the existing listener spawn helpers without a Cargo.toml
# churn (round-4 brief constraint).
lb-core = { path = "../lb-core" }
lb-controlplane = { path = "../lb-controlplane" }
lb-balancer = { path = "../lb-balancer" }
lb-observability = { path = "../lb-observability" }
lb-health = { path = "../lb-health" }
lb-security = { path = "../lb-security" }
lb-quic = { path = "../lb-quic", default-features = false }
lb-l7 = { path = "../lb-l7" }
lb-l4-xdp = { path = "../lb-l4-xdp" }
hyper = { workspace = true }
hyper-util = { workspace = true }
# CODE-2-02 Wave 2c: bind `MetricsRegistry::panic_total_counter()`'s
# `IntCounter` into a `OnceLock` so the panic hook can bump it
# without re-entering the registry on every hit.
prometheus = { workspace = true }
# CODE-2-06 Wave 2c-2: jittered exponential backoff on accept(2)
# EMFILE/ENFILE/ECONNRESET. Workspace-pinned to 0.8 — same as the
# wider workspace's dev-deps so no new transitive lands.
rand = { workspace = true }
# PROTO-001 D3-1: H3 upstream pool config-factory builds a quiche::Config
# in-line (no shared helper exists yet). Pulled in via the workspace pin
# already used by lb-quic / lb-io.
quiche = { workspace = true }

# Pillar 4b-1: CAP_BPF probe. Linux-only; the XDP path is gated on
# target_os = "linux" in main.rs.
[target.'cfg(target_os = "linux")'.dependencies]
caps = { workspace = true }

# PROTO-2-03 (Wave 2c-2): proof harness for 1xx pass-through. Spins
# up a hyper H1 server + client over a duplex so we can observe the
# wire-level 100 Continue auto-emit without binding a real socket.
[dev-dependencies]
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
# S15 A2 verify gates iv & vi need lb-quic's `test-gauges` feature
# (`PassthroughListener::flows_len`, `FlowEntry::dropped`). Default
# build leaves these out of the production binary.
lb-quic = { path = "../lb-quic", features = ["test-gauges"] }
lb-security = { path = "../lb-security" }
tokio = { workspace = true, features = ["test-util"] }
tokio-util = { workspace = true }
# S15 A2 verify gate (i) quic_passthrough_e2e: real quiche client +
# real quiche server backend, rcgen-issued cert. ring is pulled in
# for SystemRandom (16-byte SCID material).
rcgen = { version = "0.13", features = ["pem"] }
ring = "0.17"

[features]
# S15 A2-8: feature flag mirroring `lb-quic`'s `quic-terminate` /
# `quic-passthrough-only` matrix. `default = ["quic-terminate"]`
# keeps the existing binary unchanged — same QuicListener, same
# `quiche` link. `quic-passthrough-only` flips the binary into Mode
# A (`PassthroughListener` only, no quiche::Connection on this
# binary segment) — the build target for
# `scripts/never_decrypted_proof.sh` (A2-7 LINKAGE gate).
default = ["quic-terminate"]
quic-terminate = ["lb-quic/quic-terminate"]
quic-passthrough-only = ["lb-quic/quic-passthrough-only"]
