[package]
name = "expressgateway-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
expressgateway-core = { path = "../core" }
prometheus.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
tokio.workspace = true
axum.workspace = true
hyper.workspace = true

[dev-dependencies]
http.workspace = true
tower.workspace = true
