[package]
name = "expressgateway-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
expressgateway-core = { path = "../core" }
expressgateway-lb = { path = "../lb" }

tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
crossbeam.workspace = true
async-trait.workspace = true
