[package]
name = "expressgateway-protocol-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
expressgateway-core = { path = "../core" }
expressgateway-protocol-http = { path = "../protocol-http" }

prost.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
h2.workspace = true
http.workspace = true
hyper.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
