[package]
name = "expressgateway-protocol-tcp"
version = "0.1.0"
edition = "2024"

[dependencies]
expressgateway-core = { path = "../core" }
expressgateway-runtime = { path = "../runtime" }
expressgateway-tls = { path = "../tls" }
expressgateway-lb = { path = "../lb" }
expressgateway-pool = { path = "../pool" }
expressgateway-security = { path = "../security" }
expressgateway-proxy-protocol = { path = "../proxy-protocol" }
expressgateway-metrics = { path = "../metrics" }

tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
