[package]
name = "expressgateway-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
expressgateway-core = { path = "../core" }

tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
pin-project-lite.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring.workspace = true
libc = "0.2"
